--- a/logik.tex
+++ b/logik.tex
@@ -1,4 +1,4 @@
-% PDF unter http://mgaw.github.com/logik.pdf
+% PDF unter http://mgaw.github.io/logik.pdf
 \documentclass{scrartcl}
 
 \usepackage{amsmath}
